set(PROJECT_TEST_NAME ${PROJECT_NAME_STR}_test)
include_directories(${GTEST_INCLUDE_DIRS} ${COMMON_INCLUDES})

file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/test/*.cpp)
add_executable(${PROJECT_TEST_NAME} ${TEST_SRC_FILES})

set_property(TARGET ${PROJECT_TEST_NAME} PROPERTY CXX_STANDARD 11)
target_link_libraries(${PROJECT_TEST_NAME} gtest_main)

target_link_libraries(${PROJECT_TEST_NAME} ${CMAKE_THREAD_LIBS_INIT})

add_test(${PROJECT_TEST_NAME} ${PROJECT_TEST_NAME})

if (CLANG_TIDY_EXE)
  set_property(TARGET ${PROJECT_TEST_NAME} PROPERTY CXX_CLANG_TIDY "${DO_CLANG_TIDY}")
endif()

